Closed Bug 648499 Opened 13 years ago Closed 13 years ago

TI: Assertion failure: !obj->isPackedDenseArray(), at ../jsarray.cpp:2276

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Unassigned)

References

Details

$ ./js -n -a
js> [1,2,,].pop()
Assertion failure: !obj->isPackedDenseArray(), at ../jsarray.cpp:2276

This assert was added in revision 9f0cb8d7da58.
Ah, that assert is totally bogus. Whenever we pop an entry off the initialized slots of a packed array, we (unnecessarily) mark the array as not packed.  This can be fixed in the future should it become an issue.

http://hg.mozilla.org/projects/jaegermonkey/rev/68124edcaa4f
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.