[INFER] Fix bogus assert, bug 648499.